--- a/test-output/extent.html
+++ b/test-output/extent.html
@@ -45,7 +45,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Aug 13, 2020 11:22:07 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Sep 10, 2020 10:37:55 AM</span>
 				</a>
 			</li>
 			<li>
@@ -121,15 +121,15 @@
 				
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>SqProductList</span>
-						<span class='test-time'>Aug 13, 2020 11:22:19 AM</span>
+						<span class='test-name'>testApplyContinue</span>
+						<span class='test-time'>Sep 10, 2020 10:38:03 AM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Aug 13, 2020 11:22:19 AM</span>
-	<span class='label end-time'>Aug 13, 2020 11:22:41 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 22s+409ms</span>
+	<span class='label start-time'>Sep 10, 2020 10:38:03 AM</span>
+	<span class='label end-time'>Sep 10, 2020 10:38:18 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 14s+206ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -143,12 +143,12 @@
 			<tbody>
 				<tr class='log' status='fail'>
 					<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-					<td class='timestamp'>11:22:41 AM</td>
+					<td class='timestamp'>10:38:18 AM</td>
 					<td class='step-details'><pre>java.lang.AssertionError: 检查点不通过 expected [true] but found [false]
 	at org.testng.Assert.fail(Assert.java:93)
 	at org.testng.Assert.failNotEquals(Assert.java:512)
 	at org.testng.Assert.assertTrue(Assert.java:41)
-	at test.SqProductList.SqProductList(SqProductList.java:43)
+	at test.ApplyContinueTest.testApplyContinue(ApplyContinueTest.java:36)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -175,7 +175,7 @@
 		</table>
 	</div>
 							<ul class='screenshots'>
-								<li><img data-featherlight='/Users/vic/work/WORK/Work/Py_script/sh_selenium_java_master/test-output/screenshot/chrome_0813112200040.png' width='10%' src='' data-src='/Users/vic/work/WORK/Work/Py_script/sh_selenium_java_master/test-output/screenshot/chrome_0813112200040.png'></li>
+								<li><img data-featherlight='/Users/vic/work/WORK/Work/Py_script/sh_selenium_java_master/test-output/screenshot/chrome_20200910 10:38:17.png' width='10%' src='' data-src='/Users/vic/work/WORK/Work/Py_script/sh_selenium_java_master/test-output/screenshot/chrome_20200910 10:38:17.png'></li>
 							</ul>
 					</div>
 				</li>
@@ -282,13 +282,13 @@
                                         </thead>
                                         <tbody>
                                                     <tr>
-                                                        <td>Aug 13, 2020 11:22:19 AM</td>
-                                                        <td class='linked' test-id='1'>SqProductList</td>
+                                                        <td>Sep 10, 2020 10:38:03 AM</td>
+                                                        <td class='linked' test-id='1'>testApplyContinue</td>
                                                         <td><pre><pre>java.lang.AssertionError: 检查点不通过 expected [true] but found [false]
 	at org.testng.Assert.fail(Assert.java:93)
 	at org.testng.Assert.failNotEquals(Assert.java:512)
 	at org.testng.Assert.assertTrue(Assert.java:41)
-	at test.SqProductList.SqProductList(SqProductList.java:43)
+	at test.ApplyContinueTest.testApplyContinue(ApplyContinueTest.java:36)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -347,19 +347,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Aug 13, 2020 11:22:07 AM</div>
+					<div class='panel-lead'>Sep 10, 2020 10:37:55 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Aug 13, 2020 11:22:42 AM</div>
+			 		<div class='panel-lead'>Sep 10, 2020 10:38:18 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>35,737ms</div>
+					<div class='panel-lead'>22,369ms</div>
 				</div>
 			</div>
 		</div>
