--- a/test-output/old/wiseoper/methods.html
+++ b/test-output/old/wiseoper/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>wiseoper</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>20/08/13 11:22:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SqProductList.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:0, instance:test.SqProductList@5f282abb]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@802109191</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/08/13 11:22:19</td>   <td>11682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SqProductList.SqProductList()[pri:1, instance:test.SqProductList@5f282abb]">SqProductList</td> 
-  <td>TestNG-tests-1@802109191</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/08/13 11:22:41</td>   <td>34132</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SqProductList.tearDown()[pri:0, instance:test.SqProductList@5f282abb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@802109191</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/09/10 10:37:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ApplyContinueTest.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.ApplyContinueTest@5f282abb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2081194713</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/09/10 10:38:03</td>   <td>7365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApplyContinueTest.testApplyContinue()[pri:0, instance:test.ApplyContinueTest@5f282abb]">testApplyContinue</td> 
+  <td>TestNG-tests-1@2081194713</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/09/10 10:38:18</td>   <td>21601</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ApplyContinueTest.tearDown()[pri:0, instance:test.ApplyContinueTest@5f282abb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2081194713</td>   <td></td> </tr>
 </table>
